Add event group in API
